--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
   "name": "k97-jana",
-  "version": "0.1.0",
-  "private": true,
+  "version": "8.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next --port=9797",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "next": "9.5.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "classnames": "2.2.6",
+    "date-fns": "2.10.0",
+    "gray-matter": "4.0.2",
+    "next": "latest",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "remark": "11.0.2",
+    "remark-html": "10.0.0",
+    "sass": "1.26.3",
+    "typescript": "^3.9.2"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.2.2",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "babel-plugin-inline-react-svg": "^1.0.1",
+    "@zeit/next-css": "^0.1.5",
+    "@zeit/next-sass": "^0.1.2",
+    "@zeit/next-typescript": "^0.1.1"
   }
 }
