--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "k97-jana",
   "version": "8.0.0",
+  "license": "Creative Commons",
   "scripts": {
     "build": "next build",
     "dev": "next --port=9797",
