cleaning up boilerplate posts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,45 @@
+// Place your settings in this file to overwrite default and user settings.
 {
-  "editor.fontFamily": "'Lab Grotesque Mono', 'IBM Plex Mono', Monaco, 'Courier New', monospace",
-  "peacock.color": "3A4248",
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/bower_components": true,
-    "**/*.code-search": true,
-    ".next": true,
-    "@types": true,
-
+  "typescript.check.tscVersion": false,
+  "window.zoomLevel": 1,
+  "workbench.colorTheme": "Material Theme Palenight",
+  "editor.fontFamily": "'IBM Plex Code', 'Roboto Mono', Monaco, 'Courier New', monospace",
+  "editor.fontSize": 14,
+  "editor.lineHeight": 26,
+  "workbench.iconTheme": "material-icon-theme",
+  "editor.wordWrap": "on",
+  "files.exclude":{
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    // "node_modules": false,
+    "yarn.lock": true
   },
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#515c64",
-    "activityBar.activeBorder": "#481834",
-    "activityBar.background": "#515c64",
+    "scrollbarSlider.background": "#1C1D25",
+    "activityBar.background": "#23262e",
+    "statusBar.background": "#0d0e11",
+    "statusBar.foreground": "#e7e7e7",
+    "tab.activeBackground": "#5D6DBE",
+    "tab.inactiveBackground": "#23272E",
+    "tab.inactiveForeground": "#7c7c7c",
+    "tab.activeForeground": "#bcbcbc",
+    "activityBarBadge.background": "#a73856",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "sideBarSectionHeader.background": "#23272E",
+    "editor.background": "#23272E",
+    "sideBar.background": "#23272E",
+    "activityBar.activeBackground": "#23262e",
+    "activityBar.activeBorder": "#a73856",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#481834",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#3a4248",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#515c64",
-    "titleBar.activeBackground": "#3a4248",
+    "statusBarItem.hoverBackground": "#23262e",
+    "titleBar.activeBackground": "#0d0e11",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#3a424899",
+    "titleBar.inactiveBackground": "#0d0e1199",
     "titleBar.inactiveForeground": "#e7e7e799"
-  }
+  },
+  "peacock.color": "#0d0e11"
 }
