--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,9 @@
 {
   "typescript.check.tscVersion": false,
   "window.zoomLevel": 1,
-  "workbench.colorTheme": "Material Theme Palenight",
-  "editor.fontFamily": "'IBM Plex Code', 'Roboto Mono', Monaco, 'Courier New', monospace",
-  "editor.fontSize": 14,
-  "editor.lineHeight": 26,
+  "editor.fontFamily": "'Roboto Mono', Monaco, 'Courier New', monospace",
+  "editor.fontSize": 15,
+  "editor.lineHeight": 30,
   "workbench.iconTheme": "material-icon-theme",
   "editor.wordWrap": "on",
   "files.exclude":{
@@ -17,29 +16,21 @@
     // "node_modules": false,
     "yarn.lock": true
   },
+  "peacock.color": "#0d0e11",
   "workbench.colorCustomizations": {
-    "scrollbarSlider.background": "#1C1D25",
-    "activityBar.background": "#23262e",
-    "statusBar.background": "#0d0e11",
-    "statusBar.foreground": "#e7e7e7",
-    "tab.activeBackground": "#5D6DBE",
-    "tab.inactiveBackground": "#23272E",
-    "tab.inactiveForeground": "#7c7c7c",
-    "tab.activeForeground": "#bcbcbc",
-    "activityBarBadge.background": "#a73856",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "sideBarSectionHeader.background": "#23272E",
-    "editor.background": "#23272E",
-    "sideBar.background": "#23272E",
     "activityBar.activeBackground": "#23262e",
     "activityBar.activeBorder": "#a73856",
+    "activityBar.background": "#23262e",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#a73856",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "statusBar.background": "#0d0e11",
+    "statusBar.foreground": "#e7e7e7",
     "statusBarItem.hoverBackground": "#23262e",
     "titleBar.activeBackground": "#0d0e11",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#0d0e1199",
     "titleBar.inactiveForeground": "#e7e7e799"
-  },
-  "peacock.color": "#0d0e11"
+  }
 }
