--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
+    "medium-zoom": "1.0.4",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "sass": "1.26.3",
-    "medium-zoom": "1.0.4",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
@@ -27,9 +27,9 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "babel-plugin-inline-react-svg": "^1.0.1",
     "@zeit/next-css": "^0.1.5",
     "@zeit/next-sass": "^0.1.2",
-    "@zeit/next-typescript": "^0.1.1"
+    "@zeit/next-typescript": "^0.1.1",
+    "babel-plugin-inline-react-svg": "^1.0.1"
   }
 }
