--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "1.3.4",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "11.1.5",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
+    "framer-motion": "3.10.3",
     "gray-matter": "4.0.2",
     "medium-zoom": "1.0.4",
-    "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "next": "10.0.8",
+    "next-auth": "3.1.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "sass": "1.26.3",
-    "typescript": "^3.9.2"
+    "typescript": "3.9.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.2",
+    "@types/next-auth": "^3.7.1",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
