--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "3.1.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-medium-image-zoom": "^4.3.1",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "sass": "1.26.3",
