Content screenshot updates

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,8 @@ NEXTAUTH_URL=http://localhost:3001/
 
 
 https://k97-jnana.vercel.app/
+
+
+
+/assets/work/
+https://k97static.s3-ap-southeast-2.amazonaws.com/v8/work/
